Added form and some css stuff

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <div id="header">
-    <img id="logo" src="../images/penguin_500px.png">
+    <img id="logo" src="images/penguin_500px.png">
 </div>
+
+<form class="myform"> 
+	<input type="email" name="email" class="form_elements"placeholder=".edu email address"><br>
+	<input type="password" name="password" class="form_elements" placeholder="password"><br>
+	<input type="submit" value="log in" class="mybutton form_elements">
+</form>
 
 <div id="footer">
     <div class="container">
-		<p class="text-muted">flyerpenguin made by <a href="http://michaelgarate.com" target="_blank">Michael</a> and <a href="http://emilypakulski.com" target="_blank">Emily</a>.</p>
+		<p class="text-muted"><b>flyerpenguin</b> made by <a href="http://michaelgarate.com" target="_blank">Michael</a> and <a href="http://emilypakulski.com" target="_blank">Emily</a>.</p>
     </div>
 </div>
