--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
-<div id="header">
-    <img id="logo" src="images/penguin_500px.png">
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<form class="myform"> 
-	<input type="email" name="email" class="form_elements"placeholder=".edu email address"><br>
-	<input type="password" name="password" class="form_elements" placeholder="password"><br>
-	<input type="submit" value="log in" class="mybutton form_elements">
-</form>
+    <title>Sticky Footer Navbar Template for Bootstrap</title>
 
-<div id="footer">
-    <div class="container">
-		<p class="text-muted"><b>flyerpenguin</b> made by <a href="http://michaelgarate.com" target="_blank">Michael</a> and <a href="http://emilypakulski.com" target="_blank">Emily</a>.</p>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/sticky-footer.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+    <div id="header">
+        <img id="logo" src="images/penguin_500px.png">
     </div>
-</div>
+
+    <form class="myform"> 
+    	<input type="email" name="email" class="form_elements"placeholder=".edu email address"><br>
+    	<input type="password" name="password" class="form_elements" placeholder="password"><br>
+    	<input type="submit" value="log in" class="mybutton form_elements">
+    </form>
+
+    <div id="footer">
+        <div class="container">
+    		<p class="text-muted"><b>flyerpenguin</b> made by <a href="http://michaelgarate.com" target="_blank">Michael</a> and <a href="http://emilypakulski.com" target="_blank">Emily</a>.</p>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+  </body>
+</html>
