finally can fix the form thing

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <img id="logo" src="images/penguin_500px.png">
     </div>
 
-    <form class="myform"> 
-    	<input type="email" name="email" class="form_elements"placeholder=".edu email address"><br>
-    	<input type="password" name="password" class="form_elements" placeholder="password"><br>
-    	<input type="submit" value="log in" class="mybutton form_elements">
-    </form>
+
+<form id="myform"> 
+	<input type="email" name="email" class="form_elements" placeholder=".edu email address"><br>
+	<input type="password" name="password" class="form_elements" placeholder="password"><br>
+	<input type="submit" value="log in" class="mybutton form_elements">
+</form>
 
     <div id="footer">
         <div class="container">
