--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/fb.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
