js. now switching over to merging front and backends I guess

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<!-- everything that's not in the header or footer goes here -->
 	<div id="main"> 
-		<input id="url_field" type="email" name="url_field" class="form_elements" placeholder="paste in your Facebook event's web address"><br>
+		<input id="url_field" type="text" name="url_field" class="form_elements" placeholder="paste in your Facebook event's web address"><br>
 		<button id="generate_button" type="button" class="mybutton form_elements">generate</button>
 			
 			
