basic overlay looks ok

--- a/flyer.html
+++ b/flyer.html
@@ -14,11 +14,11 @@
  
     <!-- Custom styles for this template -->
 	<link href="css/flyer.css" rel="stylesheet">
-    <link href="css/sticky-footer.css" rel="stylesheet">
+  <link href="css/sticky-footer.css" rel="stylesheet">
 
   </head>
 
-  <body>
+  <body class="flyer">
   <!-- everything that's not in the header or footer goes here -->
 	<div id="flyer_main"> 
 		<div id="flyer_when_and_where">
