--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   	
   	<!-- everything that's not in the header or footer goes here -->
   	<div id="main"> 
-  		<input id="url_field" type="text" name="url_field" class="form_elements" placeholder="paste in your Facebook event's web address"><br>
+  		<input id="url_field" type="text" name="url_field" class="form_elements" placeholder="paste in your Facebook event's web address" value='https://www.facebook.com/events/657947197574532/'><br>
   		<button id="generate_button" type="button" class="mybutton form_elements">generate</button>
   			
   		<span id="text"></span>
@@ -40,6 +40,16 @@
       </div>
 
     </div>
+    <div id="overlay_wrapper">
+      <div id="overlay">
+        <div id="flyer_main"> 
+        <div id="flyer_when_and_where"></div>
+        <div id="flyer_title"></div>
+        <div id="flyer_when_and_where"></div>
+        <div id="flyer_description"></div>
+      </div>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/fb.js"></script> 
