Added dom manipulation through JS

--- a/flyer.html
+++ b/flyer.html
@@ -20,7 +20,7 @@
   <body class="flyer">
   <!-- everything that's not in the header or footer goes here -->
 	<div id="flyer_main"> 
-		<div id="flyer_when_and_where">
+		<div id="flyer_when">
 			April 5th 2014 | 3:00 PM
 		</div>
 	
@@ -28,7 +28,7 @@
 			Pillow Fight NYC 2014
 		</div>
 		
-		<div id="flyer_when_and_where">
+		<div id="flyer_where">
 			Washington Square Park<br>
 			5 Avenue, Waverly Place, West 4th and MacDougal Streets, New York NY
 		</div>
