--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <div id="overlay_wrapper">
       <div id="overlay">
         <div id="flyer_main"> 
-        <div id="flyer_when_and_where"></div>
+        <div id="flyer_when"></div>
         <div id="flyer_title"></div>
-        <div id="flyer_when_and_where"></div>
+        <div id="flyer_where"></div>
         <div id="flyer_description"></div>
       </div>
     </div>
