--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- Custom styles for this template -->
 	<link href="css/app.css" rel="stylesheet">
   <link href="css/sticky-footer.css" rel="stylesheet">
-  <link href="css/flyer.css" rel="stylesheet" media="print">
+  <link href="css/flyer.css" rel="stylesheet">
+  <link href="css/print.css" rel="stylesheet" media="print">
 
   </head>
 
