Button calls function and disappears when printing.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		</div>
 		
-		<div id="print-modal">
+		<div id="print-modal" class="no-print">
 			<div id="print-modal-controls">
 				<img src="images/icon-print.png" id="print_button">
 				print flyer
