--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             Make a print-ready flyer from a Facebook event. 
           </p>
 
-  				<input id="url_field" type="text" name="url_field" class="form_elements" placeholder="paste in your Facebook event's web address" value='https://www.facebook.com/events/657947197574532/'><br>
-  				<button id="fb_login_button" type="button" class="fb_login_button form_elements">login to Facebook</button>
-  				<button id="generate_button" type="button" class="mybutton form_elements">generate flyer</button>
+  				<input id="url_field" type="text" name="url_field" class="form-control form_elements" placeholder="paste a Facebook event link">
+
+  				<button id="fb_login_button" type="button" class="fb_login_button button form-control form_elements">login to Facebook</button>
+  				<button id="generate_button" type="button" class="generate_button form-control button form_elements">generate flyer</button>
   			</div>
     		</div>
   		</div><!-- /container -->
