hide print button from print layout

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		</div>
 		
-		<div class="print-modal" class="no-print">
+		<div class="print-modal no-print">
 			<div class="print-modal-controls">
 				<img src="images/icon-print.png" class="print_button">
 				print flyer
