--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Tauri' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 	</head>
 
 	<body>
