address markup errors

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<body>
  		<div class="main_index">
       <div class="container">
-  			<div class="row" class="center-block">
+  			<div class="row">
   				<div class="col-sm-5">
-  					<img class="logo" src="images/penguin_300px.png">
+  					<img class="logo" alt="flyer penguin" src="images/penguin_300px.png">
   				</div>
 
 					<div class="form_column col-sm-6 col-sm-offset-1"> 
@@ -57,7 +57,7 @@
 		
 		<div class="print-modal no-print">
 			<div class="print-modal-controls">
-				<img src="images/icon-print.png" class="print_button">
+				<img src="images/icon-print.png" alt="print flyer" class="print_button">
 				print flyer
 			</div>
 		</div>
