--- a/index.html
+++ b/index.html
@@ -25,15 +25,30 @@
 	</head>
 
 	<body>
+	<!-- like button for Facebook -->
+	<div id="fb-root"></div>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+	
  		<div class="main_index">
       <div class="container">
+	  
   			<div class="row">
   				<div class="col-sm-5">
   					<img class="logo" alt="flyer penguin" src="images/penguin_300px.png">
   				</div>
 
 					<div class="form_column col-sm-6 col-sm-offset-1"> 
-            <h1 class="main_title">flyer penguin</h1>
+					
+			<div class="fb-like" id="fb_like_button" data-href="http://flyerpenguin.com" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+            
+			<h1 class="main_title">flyer penguin</h1>
 
             <p class="main_description">
               Make a print-ready flyer from a Facebook event. 
