Hide print button on print

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 		
 							
-		<div class="fb-like" id="fb_like_button" data-href="http://flyerpenguin.com" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div><br>
+		<div class="fb-like no-print" id="fb_like_button" data-href="http://flyerpenguin.com" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div><br>
 	
  		<div class="main_index">
       <div class="container">
