see image in event flyer

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 				<div class="flyer_main"> 
 					<div class="flyer_when"></div>
 					<div class="flyer_title"></div>
+          <div class="flyer_image"></div>
 					<div class="flyer_where"></div>
 					<div class="flyer_description"></div>
 				</div>
