--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
 	  <script type="text/javascript" src="http://cdn.aloha-editor.org/latest/lib/require.js"></script>
 	  <script type="text/javascript" src="http://cdn.aloha-editor.org/latest/lib/vendor/jquery-1.7.2.js"></script>
 
+    <script type="text/javascript">
+Aloha = {};
+Aloha.settings = { sidebar: { disabled: true } };
+    </script>
+
 	  <!-- load the Aloha Editor core and some plugins -->
 	  <script src="http://cdn.aloha-editor.org/latest/lib/aloha.js"
 						   data-aloha-plugins="common/ui,
 												common/format,
 												common/list,
-												common/link,
-												common/highlighteditables">
+												common/link">
 	  </script>
 	   
 	  <!-- load the Aloha Editor CSS styles -->
@@ -45,6 +49,8 @@
 					var $ = Aloha.jQuery;
 					$('.editable').aloha();
 			 });
+
+
 	  </script>
   
 	</head>
