--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               Make a print-ready flyer from a Facebook event. 
             </p>
 
-            <input type="text" name="url_field" class=" event_url_field form-control form_elements" placeholder="paste a Facebook event link">
+            <input type="text" name="url_field" class=" event_url_field form-control form_elements" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
 
             <button type="button" class="fb_login_button button form-control form_elements">login to Facebook</button>
             <button type="button" class="generate_button form-control button form_elements">generate flyer</button>
