click to remove image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
         <div class="flyer_main"> 
           <div class="flyer_when editable"></div>
           <div class="flyer_title editable"></div>
-          <div class="flyer_image"></div>
+          <div class="flyer_image">
+            <div class="flyer_image_overlay hidden">
+              Click to remove image. 
+            </div>
+          </div>
           <div class="flyer_where editable"></div>
           <div class="flyer_description editable"></div>
         </div>
