always pin toolbar

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
        Aloha.ready( function() {
           var $ = Aloha.jQuery;
           $('.editable').aloha();
+          $('.aloha-ui-pin').trigger('click');
        });
        
     </script>
