SEO optimization with metatags. Following the Google guide.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Make a print-ready flyer for free from a Facebook event. Use our online editor to quickly and easily make design changes.">
+    <meta name="author" content="Emily Pakulski and Michael Garate">
 
     <title>flyerpenguin - instantly make flyers for your Facebook events</title>
 
