show message to user when logged in successfully

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <input type="text" name="url_field" class=" event_url_field form-control form_elements" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
 
-            <button type="button" class="fb_login_button button form-control form_elements">login to Facebook</button>
+            <button type="button" class="fb_login_button button form-control form_elements" data-toggle="tooltip" data-placement="right"  title="You're in!">login to Facebook</button>
             <button type="button" class="generate_button form-control button form_elements">generate flyer</button>
           </div><!-- /form_column -->
 
