added notification for mobile users that flyerpenguin isn't useful to them. closes #4

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <body>
   <!-- like button for Facebook -->
-    <div id="fb-root"></div>
+	<div id="fb-root"></div>
     <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
@@ -72,7 +72,8 @@
   
     <div class="main_index">
       <div class="container">
-     
+		<div id="mobile-note" class="alert alert-warning">Hello! Please note that while <b>flyerpenguin</b>.com displays on mobile devices and tablets, only devices that can print can really benefit from <b>flyerpenguin</b>.</div>
+	 
         <div class="row">
           <div class="col-sm-5">
             <img class="logo" alt="flyer penguin" src="images/penguin_300px.png">
@@ -80,10 +81,10 @@
 
           <div class="form_column col-sm-6 col-sm-offset-1"> 
             
-      <h1 class="main_title">flyer penguin</h1>
+			<h1 class="main_title">flyer penguin</h1>
 
-            <p class="main_description">
-              Make a print-ready flyer from a Facebook event. 
+			<p class="main_description">
+				Make a print-ready flyer from a Facebook event. 
             </p>
 
             <input type="text" name="url_field" class=" event_url_field form-control form_elements" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
