--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
 
     <!-- load the Aloha Editor core and some plugins -->
-    <script src="http://cdn.aloha-editor.org/latest/lib/aloha.js"
+    <script src="http://cdn.aloha-editor.org/latest/lib/aloha.js" 
                data-aloha-plugins="common/ui,
                         common/format,
                         common/list,
@@ -129,6 +129,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/fb.js"></script> 
+    <script src="js/flyer_writer.js"></script> 
     <script src="js/app.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
