--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@
 			<p class="main_description">
 				Make a print-ready flyer from a Facebook event. 
             </p>
+			
+			<div id="link_field" class="form-group has-feedback form-elements">
+				<input type="text" name="url_field" class="event_url_field form-elements form-control" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
+			</div> 
+            <button type="button" class="fb_login_button button form-elements form-control" data-toggle="tooltip" data-placement="right"  title="You're in!">login to Facebook</button>
+			
+            <button type="button" class="generate_button form-elements form-control button">customize flyer</button>
 
-            <input type="text" name="url_field" class=" event_url_field form-control form_elements" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
-
-            <button type="button" class="fb_login_button button form-control form_elements" data-toggle="tooltip" data-placement="right"  title="You're in!">login to Facebook</button>
-            <button type="button" class="generate_button form-control button form_elements">customize flyer</button>
           </div><!-- /form_column -->
 
         </div><!-- /row -->
