working on toolbar

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </button>
 
             <button type="button" class="btn btn-default btn-md toggle-image">
-              <span class="glyphicon glyphicon-camera"></span> Toggle Image
+              <span class="glyphicon glyphicon-picture"></span> Toggle Image
             </button>
           </div>
         </div>
