--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </p>
 			
 			<div id="link_field" class="form-group has-feedback form-elements">
-				<input type="text" name="url_field" class="event_url_field form-elements form-control" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url">
+				<input type="text" name="url_field" class="event_url_field form-elements form-control" placeholder="paste a Facebook event link" data-toggle="tooltip" data-placement="right"  title="please enter an event url.">
 			</div> 
 
             <button type="button" class="fb_login_button button form-elements form-control" data-toggle="tooltip" data-placement="right"  title="You're in!">login to Facebook</button>
