endure toolbar does not print

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     
     <div id="overlay_wrapper" class="overlay_wrapper">
-      <div class="top-toolbar">
+      <div class="top-toolbar no-print">
         <div class="container">
           <div class="row">
             <button type="button" class="btn btn-default btn-md print-button">
