--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             <button type="button" class="btn btn-default btn-md toggle-image">
               <span class="glyphicon glyphicon-picture"></span> Toggle Image
             </button>
+			
+			<span class="toolbar_text">Click the text below to edit.</span>
+			
           </div>
         </div>
       </div>
