setup top toolbar

--- a/index.html
+++ b/index.html
@@ -118,16 +118,27 @@
       <div class="top-toolbar no-print">
         <div class="container">
           <div class="row">
-            <button type="button" class="btn btn-default btn-md print-button">
-              <span class="glyphicon glyphicon-print"></span> Print
-            </button>
+            <div class="col-sm-6">
 
-            <button type="button" class="btn btn-default btn-md toggle-image">
-              <span class="glyphicon glyphicon-picture"></span> Toggle Image
-            </button>
-			
-			<span class="toolbar_text">Click the text below to edit.</span>
-			
+              <img class="mini-logo pull-left" alt="flyer penguin" src="images/penguin_300px.png">
+              <p class="toolbar-text">
+              Click a section below to edit.
+              </p>
+            </div>
+            <div class="col-sm-6">
+
+              <button type="button" class="btn btn-default btn-md print-button pull-right">
+                <span class="glyphicon glyphicon-print"></span> Print
+              </button>
+
+              <button type="button" class="btn btn-default btn-md close-flyer pull-right">
+                <span class="glyphicon glyphicon-remove"></span> Close
+              </button>
+
+              <button type="button" class="btn btn-default btn-md toggle-image pull-right">
+                <span class="glyphicon glyphicon-picture"></span> Toggle Image
+              </button>
+            </div>
           </div>
         </div>
       </div>
