added penguin comment and message

--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
+<!--
+    flyerpenguin.com
+
+                   @`$`@` '.
+                 $@$@$@$ `0 ' . .
+                @$@ ` &@&      . .`,               /'
+                @$@'         '                   /'
+                 @$@'       `                \~~~~/
+                  @$@'      `                 \  /
+                  @$@$'     '                  ||
+                $@$@$@'      '                 ||
+               @$@$@$@'       '               >><<
+              @$@$@$@'         '&`$`@`$`@ =============
+             @$@$`@$`          ' ' ' ' '
+            `$@` @$`            '
+           `$@$@` @$'            '
+           `@$@$@  @$.~~~.   ;;  '
+           `$@$@@   @;   ;@ ;;   '
+           `$@$@@    ;F&W; ;;;   '
+           `$@$@$'   ;   ;      '
+           `$@$@$@    ~~~      '
+            `@$@$@            '
+            ,$@$@$          ;'
+            ,@$@$@        ;;'
+            ,$@$@$       ;;'
+          ,@@$@$@$    ;;;;'
+       ,@$$@$@$@$ : :: ;;
+             ||  `   ` \\     . '
+            .`.         \\   ` '
+          ,   . ',       \.`,'
+
+Hello! Feel free to check out the code.
+
+Keep in mind that this website was created at a hackathon in a small
+amount of time at ungodly hours of the night. 
+
+If you think something could be better, submit a pull request!
+http://github.com/ohEmily/flyerpenguin
+
+
+ASCII art from: http://www.retrojunkie.com/asciiart/animals/penguins.htm
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
