add start over button

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@ ASCII art from: http://www.retrojunkie.com/asciiart/animals/penguins.htm
       <div class="top-toolbar no-print">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
 
               <img class="mini-logo pull-left" alt="flyer penguin" src="images/penguin_300px.png">
               <p class="toolbar-text">
               Click a section below to edit.
               </p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-8">
 
               <button type="button" class="btn btn-default btn-md close-flyer pull-right">
                 <span class="glyphicon glyphicon-remove"></span> Close
@@ -176,6 +176,10 @@ ASCII art from: http://www.retrojunkie.com/asciiart/animals/penguins.htm
 
               <button type="button" class="btn btn-default btn-md print-button pull-right">
                 <span class="glyphicon glyphicon-print"></span> Print
+              </button>
+
+              <button type="button" class="btn btn-default btn-md start-over pull-right">
+                <span class="glyphicon glyphicon-repeat"></span> Start Over
               </button>
 
               <button type="button" class="btn btn-default btn-md toggle-image pull-right">
