colors on buttons

--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@ ASCII art from: http://www.retrojunkie.com/asciiart/animals/penguins.htm
             </div>
             <div class="col-sm-8">
 
-              <button type="button" class="btn btn-default btn-md close-flyer pull-right">
+              <button type="button" class="btn btn-danger btn-md close-flyer pull-right">
                 <span class="glyphicon glyphicon-remove"></span> Close
               </button>
 
-              <button type="button" class="btn btn-default btn-md print-button pull-right">
+              <button type="button" class="btn btn-success btn-md print-button pull-right">
                 <span class="glyphicon glyphicon-print"></span> Print
               </button>
 
-              <button type="button" class="btn btn-default btn-md start-over pull-right">
+              <button type="button" class="btn btn-primary btn-md start-over pull-right">
                 <span class="glyphicon glyphicon-repeat"></span> Start Over
               </button>
 
-              <button type="button" class="btn btn-default btn-md toggle-image pull-right">
+              <button type="button" class="btn btn-primary btn-md toggle-image pull-right">
                 <span class="glyphicon glyphicon-picture"></span> Toggle Image
               </button>
             </div>
