--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 
 Hello! Feel free to check out the code.
 
-Keep in mind that this website was created at a hackathon in a small
-amount of time at ungodly hours of the night. 
-
-If you think something could be better, submit a pull request!
+Pull requests welcome!
 http://github.com/ohEmily/flyerpenguin
 
 
@@ -200,7 +197,7 @@ ASCII art from: http://www.retrojunkie.com/asciiart/animals/penguins.htm
     <script src="js/flyer_writer.js"></script> 
     <script src="js/app.js"></script>
 
-    
+
 
     <!-- make all elements with class="editable" editable with Aloha Editor -->
     <script type="text/javascript">
